<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotarm_py_cpp</name>
  <version>0.1.0</version>
  <description>Robot arm Control with Realsense based ROS2</description>
  <maintainer email="sojung0320@gmail.com">sojung32</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
